Working on mobile bug

--- a/src/ShareModules/Layout/Header/Header.scss
+++ b/src/ShareModules/Layout/Header/Header.scss
@@ -61,6 +61,9 @@
     margin-left: 0px;
     margin-right: 0px;
   }
+  .container {
+    justify-content: flex-start;
+  }
   .navbar {
     .navbar-toggler {
       border: none;
@@ -104,6 +107,12 @@
   }
 }
 
+.row {
+  .address {
+    max-width: 300px;
+  }
+}
+
 .header-top-overlay {
   z-index: 99;
   background: #7e3ac3;
@@ -134,6 +143,10 @@
     color: #edf0eb;
     border-radius: 50px;
     margin-top: 50px;
+    .white{
+      background: #edf0eb;
+
+    }
     @media (max-width: 400px) {
       font-weight: 300;
     }
@@ -154,6 +167,13 @@
 
   color: #edf0eb;
   padding: 0 45px 0 30px;
+
+  @media (max-width: 767px) {
+    display: none;
+  }
+  @media (max-width: 500px) {
+    display: none;
+  }
 }
 
 .ellip_img{
@@ -175,6 +195,12 @@
   color: #edf0eb;
   padding: 0 30px 0 14px;
   margin-left: -30px;
+  @media (max-width: 767px) {
+    margin-top: -5px;
+  }
+  @media (max-width: 500px) {
+    margin-top: -10px;
+  }
 }
 
 .connect-wallet {
